--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 	<body>
 <ul>
   <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
-  <li><a href="homepage.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="recepies.html">Recipes</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a class="active" href="#about">About</a></li>
