--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 	<body>
 		<ul>
 		  <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
-		  <li><a href="homepage.html">Home</a></li>
+		  <li><a href="index.html">Home</a></li>
 		  <li><a href="recepies.html">Recipes</a></li>
 		  <li><a class="active" href="contact.html">Contact</a></li>
 		  <li><a href="about.html">About</a></li>
