--- a/donuts.html
+++ b/donuts.html
@@ -100,7 +100,7 @@
 		
 <ul>
   <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
-  <li><a href="homepage.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a class="active" href="recepies.html">Recipes</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="#about">About</a></li>
