--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE  html>
  
-<!-- CS 80 Spring 2020 -->
-<!-- Professor Geddes -->
-<!-- Quiz 1-3 Vladimir Palenov -->
+<!-- CS 81 Spring 2020 -->
+<!-- Professor Anthony Wang -->
+<!-- Final project Vladimir Palenov -->
 
 <html>
 	<head>
@@ -62,6 +62,7 @@
   <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
   <li><a href="index.html">Home</a></li>
   <li><a href="recepies.html">Recipes</a></li>
+  <li><a href="quiz.html">Playroom</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a class="active" href="#about">About</a></li>
 </ul>
@@ -70,15 +71,14 @@
 		
 			<h2>About us: </h2>
 		<p>This website is the final project for the class</p>
-		<p>CS80 "Internet programming"</p>
+		<p>CS81  "JavaScript Programming"</p>
 		<p>Spring 2020</p>
-		<p>Professor James Geddes</p>
+		<p>Professor Anthony Wang</p>
 		<p>Student Vladimir Palenov</p>
-		<p>Pictures used from <a href="http://www.loveandlemons.com">www.loveandlemons.com</a></p>
+		<p>Pictures credits: <a href="http://www.loveandlemons.com">www.loveandlemons.com</a>,  <a href="http://www.campusfrance.org">www.campusfrance.org</a></p>
 		<!-- The link to move to the anchor top is here -->
-		
 		<footer>
-			<p>&copy2020 Vladimir Palenov CS80 Spring 2020</p>
+			<p>&copy2020 Vladimir Palenov CS81 Spring 2020</p>
 		</footer>
 	</body>
 </html>
