--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE  html>
  
-<!-- CS 80 Spring 2020 -->
-<!-- Professor Geddes -->
+<!-- CS 81 Spring 2020 -->
+<!-- Professor AnthonyWang -->
 <!-- Final project Vladimir Palenov -->
+
 
 <html>
 	<head>
@@ -67,8 +68,9 @@
 	<body>
 <ul>
   <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
-  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
   <li><a href="recepies.html">Recipes</a></li>
+  <li><a href="quiz.html">Playroom</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
@@ -90,7 +92,7 @@
 		<!-- The link to move to the anchor top is here -->
 		<a href="#top">Back to the top</a>
 		<footer>
-			<p>&copy;2020 Vladimir Palenov CS80 Spring 2020</p>
+			<p>&copy;2020 Vladimir Palenov CS81 Spring 2020</p>
 		</footer>
 	</div>
 
