--- a/bread.html
+++ b/bread.html
@@ -1,8 +1,9 @@
 <!DOCTYPE  html>
  
-<!-- CS 80 Spring 2020 -->
-<!-- Professor Geddes -->
-<!-- Final Project Vladimir Palenov -->
+<!-- CS 81 Spring 2020 -->
+<!-- Professor AnthonyWang -->
+<!-- Final project Vladimir Palenov -->
+
 
 <html>
 	<head>
@@ -102,6 +103,7 @@
   <li><h1>Annie's <br>Pastries & <br>Bakery</h1></li>
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="recepies.html">Recipes</a></li>
+  <li><a href="quiz.html">Playroom</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
@@ -133,7 +135,7 @@
 		<!-- The link to move to the anchor top is here -->
 		<a href="#top">Back to the top</a>
 		<footer>
-			<p>&copy2020 Vladimir Palenov CS80 Spring 2020</p>
+			<p>&copy2020 Vladimir Palenov CS81 Spring 2020</p>
 		</footer>
 	</body>
 </html>
