--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			  list-style-type: none;
 			  margin: 0;
 			  padding: 0;
+			  top: 0;
 			  width: 180px;
 			  background-color: #acb7ae;
 			  position: fixed;
@@ -58,6 +59,7 @@
 			}
 			img {
 				width: 50%;
+				height: auto;
 				display: block;
   				margin-left: auto;
   				margin-right: auto;
