--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </ul>
 <!-- Anchor <a> top is here -->		
 		<a name="top"></a>
-<div style="margin-left:200px;padding:1px 16px;height:1000px;">
+<div style="margin-left:200px;padding:1px 16px;height:100%;">
 		
 		<h2>Welcome to my website!</h2>
 		<p>Hello! My name is Annie and I like baking cookies, pastries and other desserts. On this website I have collected my favorite recipes. I hope it will help you make delicious treats for yourself and your loved ones. Here you will find original recipes for amazing pastries, delicious baking and unique desserts.</p>
