--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
 			  list-style-type: none;
 			  margin: 0;
 			  padding: 0;
+			  top: 0;
 			  width: 180px;
 			  background-color: #acb7ae;
 			  position: fixed;
